--- a/css/admin.css
+++ b/css/admin.css
@@ -61,7 +61,7 @@ section{
 .option-btn{
     margin-top: 1rem;
     display: inline-block;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 1rem 3rem;
     cursor: pointer;
     text-transform: capitalize;
@@ -76,9 +76,8 @@ section{
 }
 
 .delete-btn{
-   background-color: var(--main-color);
-   color:white;
    text-decoration: none;
+   color:white;
    border-radius: 15px;
    
 }
@@ -88,7 +87,6 @@ section{
 }
 
 .btn:hover,
-.delete-btn:hover,
 .option-btn:hover{
    background-color: rgb(0, 0, 0);
    color: white;
@@ -244,15 +242,13 @@ section{
 }
 
 .header .flex .profile{
+   text-align: center;
    position: absolute;
    top:125%; right:2rem;
-   background-color: var(--white);
-   box-shadow: var(--box-shadow);
-   border:var(--border);
-   border-radius: .5rem;
-   padding:2rem;
+   background-color:rgba(0, 0, 0, 0.5);
+   padding:1rem;
    padding-top: 1rem;
-   width: 30rem;
+   width: 20rem;
    display: none;
    animation: fadeIn .2s linear;
 }
@@ -265,9 +261,9 @@ section{
 
 .header .flex .profile p{
    margin-bottom: 1rem;
-   font-size: 2rem;
+   font-size: 1rem;
    text-align: center;
-   color:var(--black);
+   color:var(--white );
 }
 
 .header .flex .profile.active{
