--- a/css/customer.css
+++ b/css/customer.css
@@ -216,6 +216,8 @@ section {
   display: inline-block;
 }
 
+
+
 @keyframes fadeIn {
   0% {
     transform: translateY(1rem);
@@ -890,7 +892,11 @@ section {
   color: var(--white);
   background-color: #222;
 }
-
+#placeOrder{
+  color: #fff;
+  background-color: var(--black);
+  border-radius: 25px;
+}
 /* media queries  */
 
 @media (max-width: 991px) {
